# isaac_ros_gestures

./: .gitignore  Dockerfile.theta  README.md  collector.py  package.xml  run_yolo_inference.py  run_yolo_inference_tensor.py  setup.cfg  setup.py
isaac_ros_gestures/: classifier_collector_node.py  classifier_output_decoder.py  full_body_pose_decoder.py  handbox_decoder.py  handbox_decoder_old.py  handbox_tensor_view_viz.py  handpose_decoder.py  image_gate.py  palm_detector_node.py  session_collector_node.py  tensor_visualizer.py  theta_uvc_src.py  video_collector_node.py  video_tester_node.py
isaac_ros_yolov8_pose/: theta_uvc_src.py  yolov8_pose_decoder.py
launch/: camera_only.launch.py  pipeline.launch.py  pipeline_full_body.launch.py
rviz/: view_handpose.rviz
scripts/: build_pose_engine.py  check_onnx.py  check_pt.py  convert_model_nchw.py  export_onnx.py  video_Recorder.py  video_frame_extractor.py  visualize_keyframes.py  yolo-train.py
